# JetBrainsInternship

./: .gitignore  CMakeLists.txt  README.md  main.cpp  prepare_data.sh
index_searcher/: DiskSearcher.cpp  DiskSearcher.h  IndexSearch.cpp
indexer/: Indexer.cpp  SuffixAutomaton.cpp  SuffixAutomaton.h
parallel_search/: ParallelSearcher.cpp  ParallelSearcher.h  SeqSearch.cpp  StrSearch.cpp
searcher/: DiskSearcher.cpp  DiskSearcher.h  Search.cpp
substring_searcher/: DiskSearcher.cpp
